2005-08-04 Parick Galbraith <patg@mysql.com> (3.0002_1)
  * Prepared statement support is default now. To turn it off
    a parameter 'mysql_emulated_prepare' must be turned ON
  * Better error handling in mysql_internal_execute_ps (renamed
    from mysql_internal_execute41). Also free the result if error -
    that could have been a memory bug
  * Added a simply 'do' to t/35prepare.test to see if you can turn
    off prepared statements in the 'do' call.
  * Cleaned up a LOT of cruft. Added more 'caveat' blurbage to old
    Mysql.pm lib, which will not work with prepared statements
  
2005-07-06 Parick Galbraith <patg@mysql.com> (3.0001_3)
  * Fix to ensure MYSQL_BIND is only defined when mysql
    client version is >= 4.1.3. Thanks to Tom Parkison

2005-07-06 Parick Galbraith <patg@mysql.com> (3.0001_2)
  * Fixed runtime bug (when inserting or updating quotes or double quotes)
    (Thanks to Brad Choate, Six Apart Ltd.)

2005-07-04 Parick Galbraith <patg@mysql.com> (3.0001_1)
  * Changed uint argument in safe_sv_fetch to int due to 
    uint not being available on windows unless you include
    my_globals.h in dbdimp.h, which also breaks on unixen!
  * Removed // comments from mysql.xs (thanks Bodo Bergman!)

2005-07-03 Patrick Galbraith <patg@mysql.com> (3.0000_0)
  * Special Thanks to Steve Hay for his patch to fix windows 
  * Fixed Makefile.PM for windows compiles
  * Removed long long type from dbdimp.h
  * Changed strncasecmp to strncmp (still need a better long-term solution)
    in dbdimp.c
  * Modified Makefile.PM to make prepared statements on by default

2005-04-26 Patrick Galbraith <patg@mysql.com> (2.9015_3)
  * Added patch from Stas Beckman for new DBI feature take_imp_data, needed
   for DBI::Pool
  * Fix to Statement.pm for old API call for numfields that caused
    warnings on 40numrows and akmisc tests
  * Fix to bind_ph to throw an error if trying to bind a non-numeric 
    value as numeric