@@ -1,24 +1,25 @@
-t/60leaks.t
-t/40listfields.t
-t/10dsnlist.t
-t/40numrows.t
-t/30insertfetch.t
 t/00base.t
-t/insertid.t
-t/50commit.t
+t/10dsnlist.t
+t/20createdrop.t
+t/30insertfetch.t
 t/35limit.t
+t/35prepare.t
+t/40bindparam.t
+t/40blobs.t
+t/40listfields.t
 t/40nulls.t
+t/40numrows.t
+t/41blobs_prepare.t
+t/50chopblanks.t
+t/50commit.t
+t/60leaks.t
+t/akmisc.t
+t/ak-dbd.t
 t/dbdadmin.t
 t/lib.pl
-t/20createdrop.t
+t/insertid.t
 t/mysql.dbtest
-t/40bindparam.t
 t/mysql.t
-t/40blobs.t
-t/41blobs_prepare.t
-t/akmisc.t
-t/50chopblanks.t
-t/ak-dbd.t
 t/mysql2.t
 lib/DBD/mysql/GetInfo.pm
 lib/DBD/mysql/INSTALL.pod
